--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,9 +2,12 @@ header.header
     .header__column 
         a(href=routes.home)
             i.fab.fa-youtube 
+            h1 YouTube
     .header__column 
         form(action=routes.search,method="get")
             input(type="text",placeholder="Search by term...",name="term")
+            button(type="submit")  
+                i.fas.fa-search
     .header__column 
         ul 
             if !user
